--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,11 +14,11 @@ main:
     url: experience/
     weight: 15
   - name: Publications
-    url: /#papers
+    url: papers/
     weight: 12
   - name: Outreach
-    url: /#talks
+    url: talks/
     weight: 13
   - name: News
-    url: /#news
+    url: news/
     weight: 14
