--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,21 @@ main:
   - name: Home
     url: /
     weight: 10 
+  - name: Services
+    url: services/
+    weight: 11 
   - name: Projects
     url: projects/
-    weight: 11 
+    weight: 12
   - name: Experience
     url: experience/
-    weight: 15
+    weight: 16
   - name: Publications
     url: /#papers
-    weight: 12
+    weight: 13
   - name: Outreach
     url: /#talks
-    weight: 13
+    weight: 14
   - name: News
     url: /#news
-    weight: 14
+    weight: 15
