--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,14 +8,11 @@ main:
     url: /
     weight: 10 
   - name: Services
-    url: /#services
+    url: /#service
     weight: 11 
   - name: Projects
     url: projects/
     weight: 12
-  - name: Experience
-    url: experience/
-    weight: 16
   - name: Publications
     url: /#papers
     weight: 13
@@ -25,3 +22,6 @@ main:
   - name: News
     url: /#news
     weight: 15
+  - name: Experience
+    url: experience/
+    weight: 16
