--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,6 +35,8 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
+      image: "assets/media/valdeo.png"
+      height: 40
       text: "ValDEO - Fifi ADODO"
 
 # Site footer
